--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -34,6 +34,10 @@ p {
     margin: 0;
 }
 
+picture {
+    display: flex;
+}
+
 .container {
     width: 100%;
     max-width: 1400px;
@@ -58,6 +62,29 @@ p {
 .description {
     color: #fff;
     font-weight: 400;
+}
+
+.button {
+    display: inline-block;
+    vertical-align: top;
+    border-radius: 50px;
+    border: 0;
+    cursor: pointer;
+    font-size: 25px;
+    font-weight: 700;
+    color: #fff;
+    background-color: #7f7770;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    transition: background .1s linear;
+    letter-spacing: 3px;
+    outline: 0;
+
+    @media (max-width: 480px) {
+        font-size: 18px;
+        width: 250px;
+    }
 }
 
 .header {
@@ -99,11 +126,11 @@ p {
 
 .background--blue {
     width: 100%;
-    background: url("../img/background--blue.svg");
+    background: url("../img/blue-face.png");
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
-    min-height: 735px;
+    min-height: 777px;
     position: relative;
     z-index: 2;
 }
@@ -122,6 +149,10 @@ p {
     min-height: 800px;
 }
 
+.intro__text-area {
+    padding-bottom: 100px;
+}
+
 .intro__title {
     font-size: 103px;
 }
@@ -130,4 +161,87 @@ p {
     max-width: 50%;
     font-size: 33px;
     margin: 0 auto;
+}
+
+.menu__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__title {
+    color: #7287ae;
+    font-size: 47px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 50px 0 100px 0;
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 75px;
+}
+
+.card__item {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.card__photo {
+    width: 100%;
+}
+
+.card__image {
+    width: 100%;
+}
+
+.menu__text-area {
+    height: auto;
+    background-color: #fff;
+    text-align: left;
+}
+
+.card__title {
+    color: #504f4f;
+    font-size: 33px;
+    font-weight: 700;
+    margin: 15px 0;
+}
+
+.card__description {
+    color: #504f4f;
+    font-size: 25px;
+    font-family: "Lato-Regular";
+    margin-bottom: 15px;
+}
+
+.price {
+    color: #504f4f;
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.menu__button {
+    width: 25%;
+    font-size: 23px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #7287ae;
+    letter-spacing: 0;
+    padding: 10px 20px;
+    margin-bottom: 100px;
+
+    &:hover {
+        color: #fff;
+        background-color: #586988;
+    }
+
+    @media (max-width: 480px) {
+        width: 200px;
+    }
 }
